Shira/force-app/main/default/objects/Regulations__c/fields/ProjectRegulations__c.field-meta.xml
<CustomField>
    <fullName>ProjectRegulations__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>פרויקט</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>תקנות</relationshipLabel>
    <relationshipName>ProjectRegulations</relationshipName>
    <type>Lookup</type>
</CustomField>