Shira/force-app/main/default/objects/Regulations__c/fields/RegulationStage__c.field-meta.xml
<CustomField>
    <fullName>RegulationStage__c</fullName>
    <label>שלב תקנה</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>חדש</fullName>
            </value>
            <value>
                <fullName>בטיפול</fullName>
            </value>
            <value>
                <fullName>נדרשות השלמות</fullName>
            </value>
            <value>
                <fullName>סיום טיפול</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>