Shira/force-app/main/default/objects/Regulations__c/fields/RequlationNum__c.field-meta.xml
<CustomField>
    <fullName>RequlationNum__c</fullName>
    <label>מספר תקנה</label>
    <length>8</length>
    <type>Text</type>
</CustomField>