Shira/force-app/main/default/objects/Regulations__c/fields/RequlationVersion__c.field-meta.xml
<CustomField>
    <fullName>RequlationVersion__c</fullName>
    <label>מספר גרסה</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>